# communicators

./: .git_commands.txt.kate-swp  .gitignore  LICENSE  README.md  backoff_equation_plot.py  backoff_simulation.csv  com_versions.md  com_versions.txt  communicators.mmd  core.py  counter.py  decorators1.py  git_commands.txt  manifest_script.py  pyproject.toml  state.py  ws_tamer1.py
.obsidian/: workspace.json
communicators/: .state.py.kate-swp  2026-04-13.md  Backoff Function.md  Freight Sub-Library.md  Orchestration Script - Communicators.md  __init__.py  com-graph.mmd  communicators_core.cpp  core.py  decorators.py  ffi.py  freight.py  generate_mermaid.py  generate_topology_json.py  manifest.cpp  mermaid_code.mmd  state copy.py  state.py  topology.json  unix_socket.py  ws_tamer.py
communicators-venv/: pyvenv.cfg
communicators/control-layer-methods/: Landscaping.md  bash_wrappers.py  control-layer-methods.md  healing_tree.py  landscaping.py  launcher.py  manifest_integrator.py  process_registry.py
communicators/control-script/: control-script.md  orchestration-script.py
communicators/ffiir/: fiirr_description.md  to_from.py
communicators/graph-methods/: graph-methods.md  unix_socket.py
communicators/node-methods/: core.py  node-methods.md
communicators/prelude/: .env  alias.py  landscaping.py  prelude.md  standard-imports.py  standard.py
communicators/state-methods/: Communicators-Graph.md  (+12 more)
spike_client_server_pairs/: prompt_client_uaa copy.py  prompt_client_uaa.py  response_server_uaa copy.py  response_server_uaa.py
src/: __init__.py  decorators.py
(+2 files in other folders)
