[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "communicators"
version = "0.6.16"
license = { file = "LICENSE" }
description = "A library for websocket-based communication using asyncio."
authors = [
    {name = "Thomas Fox", email = "your-email@example.com"},
]
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "DateTime==6.0",
    "frozenlist==1.8.0",
    "idna==3.11",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pytz==2026.1.post1",
    "typing_extensions==4.15.0",
    "websockets==16.0",
    "yarl==1.23.0",
    "zope.interface==8.2",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Analysis Labs License",  # Adjust if different
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AnalysisLabs/communicators"

[tool.setuptools]
packages = ["communicators"]
